# innovation-networks-pipelines

./: .bruin.yml  .gitignore  README.md  pipeline.yml  pyproject.toml
assets/_lib/: config.py
assets/core/: core_investment_pairs.sql  core_vc_investments.sql
assets/graph/: graph_edges.sql  graph_nodes.py
assets/raw/: raw_companies.py  raw_funding_rounds.py  raw_investments.py  raw_investors.py
assets/staging/: stg_investments_funded.sql
dashboard/: 0_Home.py  db.py  pyproject.toml
dashboard/pages/: 1_Pipeline_Funnel.py  2_Data_Explorer.py  3_Community_Explorer.py  4_Nestedness_Analysis.py  5_Johnson_Temporal.py  (+2 more)
docs/: huggingface-deployment.md
lib/: pyproject.toml
lib/complexity/: eci.py
lib/graph/: __init__.py  construction.py  modularity.py  nestlon.py  registry.py  whole_network.py
lib/nestedness/: johnson.py  nodf.py  spectral.py
lib/tests/: test_nestlon.py
lib/utils/: bipartite.py  db.py
scripts/: export_to_hf.py  pyproject.toml
us-pipeline/: DAG.puml  README.md  pipeline.yml  pyproject.toml
us-pipeline/assets/core/: core_investment_pairs.sql
us-pipeline/assets/experiments/johnson/: exp_johnson_nestedness.py
us-pipeline/assets/graph/: graph_nodes.py
us-pipeline/assets/raw/: raw_companies.py  raw_funding_rounds.py  raw_investments.py  raw_investors.py
us-pipeline/assets/reports/: 0_Home.py  db.py  report_johnson_nestedness.py
us-pipeline/assets/reports/pages/: 1_Pipeline_Funnel.py  2_Data_Explorer.py  3_Community_Explorer.py  4_Nestedness_Analysis.py
us-pipeline/outputs/figures/johnson_nestedness/: johnson_summary.csv
(+34 files in other folders)
